--- a/evangelist/templates/evangelist/members/partials/_church_member_table.html
+++ b/evangelist/templates/evangelist/members/partials/_church_member_table.html
@@ -11,7 +11,7 @@
                 <th>📛 Full Name</th>
                 <th>⚥ Gender</th>
                 <th>📞 Phone</th>
-                <th>🏡 Community (Zone)</th>
+                <th>🏡 Cell (OutStation)</th>
                 <th>⏳ Created</th>
                 <th>⚙️ Actions</th>
             </tr>
@@ -61,7 +61,6 @@
         border-bottom: 1px solid #ddd;
         white-space: nowrap;
     }
-
 
     /* 🖼️ Profile Picture */
     .profile-pic {
