--- a/templates/partials/evangelist_bottombar.html
+++ b/templates/partials/evangelist_bottombar.html
@@ -153,12 +153,19 @@
         <span>News</span>
     </a>
 
-
     <a href="{% url 'evangelist_notifications' %}" class="floating-button" style="background-color: #6f42c1;"
        onmouseover="this.style.backgroundColor='#59369e'"
        onmouseout="this.style.backgroundColor='#6f42c1'">
         <span style="font-size: 16px;">🔔</span>
         <span>Notifications</span>
+    </a>
+
+    <!-- Offerings Button (💰) -->
+    <a href="#" class="floating-button" style="background-color: #dc3545;"
+       onmouseover="this.style.backgroundColor='#b02a37'"
+       onmouseout="this.style.backgroundColor='#dc3545'">
+        <span style="font-size: 16px;">💰</span>
+        <span>Offerings</span>
     </a>
 
 </div>
