--- a/templates/partials/evangelist_sidebar.html
+++ b/templates/partials/evangelist_sidebar.html
@@ -154,6 +154,14 @@
         <span>Notifications</span>
     </a>
 
+    <!-- Offerings Button (💰) -->
+    <a href="#" class="sidebar-button" style="background-color: #dc3545;"
+       onmouseover="this.style.backgroundColor='#b02a37'"
+       onmouseout="this.style.backgroundColor='#dc3545'">
+        <span style="font-size: 16px;">💰</span>
+        <span>Offerings</span>
+    </a>
+
 </div>
 
 <script>
